[tool.poetry]
name = "certpusher"
version = "0.1.0"
description = "pushes certs"
authors = ["Chaz Schlarp <schlarpc@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
paramiko = "^2.11.0"
cryptography = "^37.0.4"
requests = "^2.28.1"

[tool.poetry.scripts]
certpusher = "certpusher:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
